# SupervisorMCP

./: .gitignore  Dockerfile  README.md  pyproject.toml  test-script.md  test_server.py
src/: __init__.py  llm_client.py  prompts.py  schemas.py  server.py  storage.py  supervisor_service.py
