[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "supervisor-mcp"
version = "1.0.0"
description = "Simple MCP supervisor server"
dependencies = [
    "mcp>=1.0.0",
    "pydantic>=2.5.0",
    "openai>=1.0.0",
]
requires-python = ">=3.11"

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.21.0",
]
